# team-virrey-meetup-text-cli

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: pokemon.db
pokemon_meetup/common/: pokemon_types.py  weather.py
pokemon_meetup/database/: models.py
pokemon_meetup/services/: pokemon_service.py
pokemon_meetup/templates/: manager.py
pokemon_meetup/utils/: date_utils.py
pokemon_meetup/web/: pokemon_api.py
scripts/: dynamax_monday.py  legendary_hour.py  manage_database.py  max_battle_day.py  raid_day.py  spotlight_hour.py
templates/: README.md  dynamax_monday.txt  legendary_hour.txt  max_battle_day.txt  pokemon_summary.txt  raid_day.txt  spotlight_hour.txt
tests/: test_pokemon_types.py
