[project]
name = "pokemon-meetup"
version = "0.1.0"
description = "Pokémon Go meetup event text generator for Team Virrey"
authors = [{ name = "Daniel del Castillo", email = "ddelcastillo@users.noreply.github.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "httpx>=0.27.0,<0.28",
    "pyperclip>=1.9.0,<2",
]

[dependency-groups]
code-quality = [
    "pytest>=7.4.0,<8",
    "mypy>=1.7.0,<2",
    "black>=23.11.0,<24",
    "isort>=5.12.0,<6",
    "ruff>=0.11.12,<0.12",
]
test = ["pytest>=7.4.0,<8"]

[tool.uv]
default-groups = [
    "code-quality",
    "test",
]

[tool.hatch.build.targets.sdist]
include = ["pokemon_meetup"]

[tool.hatch.build.targets.wheel]
include = ["pokemon_meetup"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 119
target-version = ["py312"]
extend-exclude = '''
/(
  | .venv/
  | venv/
  | local/
)/
'''

[tool.isort]
profile = "black"
line_length = 119
extend_skip = [
    "local/",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
follow_untyped_imports = true


# Exclude patterns to avoid module name conflicts
exclude = [
    ".venv/",
    "venv/",
    "local/",
    "scripts/",
    "tests/"
]

[tool.ruff]
target-version = "py313"
line-length = 119
show-fixes = true
extend-exclude = [
    "local/",
]

[tool.ruff.format]
docstring-code-format = false
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations
    "SIM", # flake8-simplify
    "TCH", # type-checking
    "RUF", # Ruff-specific rules
]
ignore = ["E203", "D203", "D100", "D101", "D104", "F401"]
exclude = [
    "tests/**/*",
    ".venv",
    "venv",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
